Adding Metaball when unit scale is smaller than 0.01 seemingly hangs Blender #36438

Closed
opened 2013-08-11 20:58:36 +02:00 by Vincent Akkermans · 7 comments

%%%--- Operating System, Graphics card ---
OSX 10.8, Geforce 650M

- Blender version with error, and version that worked ---

Happens in Blender 2.68a

- Short description of error ---

Blender seems to hang indefinitely in the while loop in polygonize(...) in mball.c
I suspect it doesn't actually hang indefinitely, but that it adds so many cubes that it just takes very long before it is done processing them.

- Steps for others to reproduce the error (preferably based on attached .blend file) ---
  • Open any blend file
  • In the properties window set the unit scale to Metric and the Scale to 0.01 or smaller
  • Add any type of Metaball
    %%%
%%%--- Operating System, Graphics card --- OSX 10.8, Geforce 650M - Blender version with error, and version that worked --- Happens in Blender 2.68a - Short description of error --- Blender seems to hang indefinitely in the while loop in polygonize(...) in mball.c I suspect it doesn't actually hang indefinitely, but that it adds so many cubes that it just takes very long before it is done processing them. - Steps for others to reproduce the error (preferably based on attached .blend file) --- * Open any blend file * In the properties window set the unit scale to Metric and the Scale to 0.01 or smaller * Add any type of Metaball %%%
Author
Member

Changed status to: 'Open'

Changed status to: 'Open'

%%%I managed to generate a metaball using the specified settings by waiting a few minutes. However, viewport performance is awful and it's taking forever to load edit mode. I ended up terminating the process because it just took too long. It looks like it's hanging simply because of the density and sheer size of the object.

Win7 x64 on an AMD Phenom II x6 OCed to 3.6 GHz
Blender also took up about 600 MB of ram during generation of a single default metaball. %%%

%%%I managed to generate a metaball using the specified settings by waiting a few minutes. However, viewport performance is awful and it's taking forever to load edit mode. I ended up terminating the process because it just took too long. It looks like it's hanging simply because of the density and sheer size of the object. Win7 x64 on an AMD Phenom II x6 OCed to 3.6 GHz Blender also took up about 600 MB of ram during generation of a single default metaball. %%%

%%%Fixed in r59307, thanks for the report! :)%%%

%%%Fixed in r59307, thanks for the report! :)%%%

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Added subscriber: @spockTheGray-4

Added subscriber: @spockTheGray-4

Hi,

I am seeing this happening on a much larger scale in Blender 2.78c. I'm running 2.78c on a box w/ an i7 & gtx 1070.

All you have to do to reproduce is add a metaball, tab on over into edit mode and add another metaball and reduce it's radius to less than 0.150... my box is a beast and it's wigging out hard on this... completely unresponsive and eating up 1.5 GB of memory (I have plenty of RAM so it's not swapping that's causing this)...

Any ideas?

Thanks

Hi, I am seeing this happening on a much larger scale in Blender 2.78c. I'm running 2.78c on a box w/ an i7 & gtx 1070. All you have to do to reproduce is add a metaball, tab on over into edit mode and add another metaball and reduce it's radius to less than 0.150... my box is a beast and it's wigging out hard on this... completely unresponsive and eating up 1.5 GB of memory (I have plenty of RAM so it's not swapping that's causing this)... Any ideas? Thanks

Just another update in case it helps - I tested and again and noticed that, after you add the second metaball, if you adjust the "radius" param in the left panel to something like say 0.05, it works super snappy. It's only if you "grab" the radius value w/ your mouse and slide left to reduce the value that I see this issue... and even turning off "continous grab" in the Input settings tab in User Prefs does not fix this.

Cheers,
Danrae

Just another update in case it helps - I tested and again and noticed that, after you add the second metaball, if you adjust the "radius" param in the left panel to something like say 0.05, it works super snappy. It's only if you "grab" the radius value w/ your mouse and slide left to reduce the value that I see this issue... and even turning off "continous grab" in the Input settings tab in User Prefs does not fix this. Cheers, Danrae
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#36438
No description provided.