Fix [#36438] Adding Metaball when unit scale is smaller than 0.01 seemingly hangs Blender

Wiresize and rendersize were not handled regarding scene scale, leading to insane precision when working in cm or less...