source/blender/makesrna/intern/rna_meta.c
@@ -320,13 +320,13 @@ static void rna_def_metaball(BlenderRNA *brna)
 	/* number values */
 	prop = RNA_def_property(srna, "resolution", PROP_FLOAT, PROP_DISTANCE);
 	RNA_def_property_float_sdna(prop, NULL, "wiresize");
-	RNA_def_property_range(prop, 0.050f, 1.0f);
+	RNA_def_property_range(prop, 0.005f, 10000.0f);
 	RNA_def_property_ui_text(prop, "Wire Size", "Polygonization resolution in the 3D viewport");
 	RNA_def_property_update(prop, 0, "rna_MetaBall_update_data");
 	
 	prop = RNA_def_property(srna, "render_resolution", PROP_FLOAT, PROP_DISTANCE);
 	RNA_def_property_float_sdna(prop, NULL, "rendersize");
-	RNA_def_property_range(prop, 0.050f, 1.0f);
+	RNA_def_property_range(prop, 0.005f, 10000.0f);
 	RNA_def_property_ui_text(prop, "Render Size", "Polygonization resolution in rendering");
 	RNA_def_property_update(prop, 0, "rna_MetaBall_update_data");
 	
